# WAgent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_ingest.py  run_migrate_topics.py  run_reclassify.py
data/: topic_taxonomy.json
data/documents/: ai_interview_basics.txt
docs/: 简历修改建议.md
scripts/: migrate_qdrant.py
src/wagent/: __init__.py  config.py  llm.py  scheduler.py  utils.py
src/wagent/agents/: __init__.py  graph.py  intent.py  interviewer.py  judge.py  router.py  schemas.py
src/wagent/cli/: interview_session.py  main.py  prompt_utils.py  qa_session.py  qdrant_docker.py  smart_prompt.py
src/wagent/evaluation/: __init__.py  runner.py  virtual_candidate.py
src/wagent/harness/: __init__.py  budget.py  context.py  harness.py  middleware.py  state.py  tools.py  tracer.py
src/wagent/mcp_servers/: __init__.py  bing_server.py  pdf_downloader.py  updater.py  xiaohongshu_server.py
src/wagent/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  retriever.py  store.py
tests/: test_e2e.py  test_eval.py  test_harness.py  test_rag.py
tools/xiaohongshu-skills/scripts/: cli.py
tools/xiaohongshu-skills/scripts/xhs/: feed_detail.py  stealth.py  types.py
